# NftablesBuilder

./: LICENSE  README.md
gui/: index.html
gui/src/: App.css  App.tsx  main.css  main.tsx
gui/src/components/: AddUserDialog.tsx  AlertBar.tsx  ChainsPanel.tsx  ConfigurationsPanel.tsx  ConfirmDialog.tsx  CustomRulesPanel.tsx  CustomTabPanel.tsx  DNatRules.tsx  DefaultsPanel.tsx  FilterTable.tsx  FloatingCheck.tsx  FloatingInstall.tsx  FloatingList.tsx  FloatingValue.tsx  HostGroupsPanel.tsx  HostsPanel.tsx  InterfacesPanel.tsx  ListSelectionDialog.tsx  Loading.tsx  LogPanel.tsx  LoginDialog.tsx  ManualFilter.tsx  NatTable.tsx  NetworksPanel.tsx  PaperComponent.tsx  PortDialog.tsx  SNatRules.tsx  ServicesPanel.tsx  SettingsDialog.tsx  TextDialog.tsx  TitleBar.tsx  ToolBarButton.tsx
gui/src/ts/: checks.ts  dragreceiving.ts  icmp.ts  textdialog.ts  utils.ts
nftablesbuilder/: Cargo.toml
nftablesbuilder/src/: main.rs
webserver/: Cargo.toml
webserver/src/: main.rs
