[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.145"
time = "0.3.41"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tower-sessions = "0.14.0"
tower-http = { version = "0.6.6", features = ["full"] }
network-interface = "2.0.1"
hex = "0.4"
walkdir = "2.5.0"
openssl = "0.10.73"
toml = "0.9.6"
thotp = "0.1.11"
argon2 = "0.5.3"
settings = { path = "../settings" }